# FasterTransformer-detr3d

./: .gitignore  CMakeLists.txt  CMakeLists_x86.cmake  README.md  build.sh  build_aarch64.sh  cpp_run.sh  gemm_config.in  gemm_config.in.x86  gen_custom_transformer_decoder_p2o_4in_nc12.py  gen_custom_transformer_decoder_p2o_4in_nc6.py  gen_custom_transformer_decoder_p2o_add_conv.py  gen_custom_transformer_decoder_p2o_mv3.py  gen_custom_transformer_decoder_p2o_mv3_attribute2in.py  gen_custom_transformer_decoder_p2o_mv3_onlyuse_2hyper.py  readme  torch_run.sh  trt_run.sh  w.list
cmake/: cmake_aarch64.toolchain
examples/cpp/: CMakeLists.txt
examples/cpp/decode_ma/: CMakeLists.txt  decode_ma.cc  helper_string.h
examples/cpp/decode_ma/hyper/: attn.out_proj.weight.256-256  key.weight.256-256  query.weight.256-256  value.bias.1-256  value.weight.256-256
examples/cpp/decoding/: decoding_example.cc
examples/cpp/sv/: CMakeLists.txt  sv_example_fp16_linear.cc  sv_example_fp32_linear.cc  sv_example_int8_chw32.cc
examples/cpp/vit/: vit_example.cc
examples/pytorch/decoder/: decoder_example.py
examples/pytorch/decoder/utils/: decoder.py  ft_decoder.py
examples/pytorch/vit/: infer_visiontransformer_op.py
examples/tensorrt/vit/: embed_torch.npy  infer_visiontransformer_plugin.py  plugin_loader.py  torch_out.npy
merged/python/: insert_node_inner.py  merge_model.py  modify_onnx_add_nodes.py  utils.py
python_vesion/: readme
python_vesion/nc12-d/: svdet_transformer.py
python_vesion/nc4/: feature_sampling_onnx.py  feature_sampling_onnx_v1.py  feature_sampling_onnx_v2.py  svdet_transformer.py
python_vesion/nc6-12/: svdet_transformer_add_debug_xp.py
src/fastertransformer/: readme.txt
src/fastertransformer/kernels/: CMakeLists.txt  bert_preprocess_kernels.cu  decoder_masked_multihead_attention.cu  decoder_masked_multihead_attention.h  gen_relative_pos_bias.h  layernorm_kernels.cu  layernorm_kernels.h  layernorm_kernels_exp.cu  layernorm_kernels_exp_out.cu  layernorm_kernels_post_relu.cu  reduce_kernel_utils.cuh  sampling_topp_kernels.cu  svadd_bias_relu_kernels.cu  svadd_bias_relu_kernels.h  svcross_attention_kernels.cu  svcross_attention_kernels.h  svreg_update_kernels.cu  svreg_update_kernels.h  unfused_attention_kernels.cu  unfused_attention_kernels.h  vit_kernels.cu  vit_kernels.h
src/fastertransformer/layers/: CMakeLists.txt  DenseWeight.h  FfnLayer.cc  FfnLayer.h  SVClsLayer.cc  SVClsLayer.h  SVClsLayer_fp32.cu  SVClsLayer_half.cu  SVRegUpdateLayer.cc  SVRegUpdateLayer.h  SVRegUpdateLayer_fp32.cu  SVRegUpdateLayer_half.cu
src/fastertransformer/layers/attention_layers/: AttentionWeight.h  CMakeLists.txt  DecoderSelfAttentionLayer.cc  DecoderSelfAttentionLayer.h  FusedAttentionLayer.cu  SVCrossAttentionLayer.cc  SVCrossAttentionLayer.h  (+13 more)
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/sv/: CMakeLists.txt  SV.cc  SV.h  SVLayerWeight.h  SVLayerWeightDebug.h  SVWeight.h  gsd_gemm.cc  helper_cuda.h  helper_file.h  helper_macros.h  helper_string.h  readme.md  sv_gemm.cc
src/fastertransformer/tensorrt_plugin/: CMakeLists.txt
src/fastertransformer/tensorrt_plugin/sv/: CMakeLists.txt  SVTransformerPlugin.cpp  SVTransformerPlugin.h
src/fastertransformer/utils/: CMakeLists.txt  Tensor.h  cublasAlgoMap.cc  cublasAlgoMap.h  cublasMMWrapper.cc  cuda_utils.h  cutlassMM.h  cutlassMM_batched_fp16.cu  cutlassMM_fp16.cu  nativeMMWrapper.cu  nativeMMWrapper.h
(+18 files in other folders)
